# garmin-mcp

./: .gitignore  README.md  pull_garmin_data.sh  pyproject.toml  test_server.py  tools_playground.ipynb
.github/workflows/: codeql.yml
garmin_mcp/: config.py  nl_to_sql.py  push_workout.py  schema_context.py  server.py
tests/: __init__.py  conftest.py  test_nl_to_sql.py  test_server.py
